<resources>
    <string name="app_name">Just Java</string>
    <string name="hint_name">Name</string>
    <string name="toppings_header">Toppings</string>
    <string name="whipped_cream_label">Whipped Cream</string>
    <string name="chocolate_label">Chocolate</string>
    <string name="quantity_header">Quantity</string>
    <string name="quantity_value">0</string>
    <string name="quantity_plus">+</string>
    <string name="quantity_minus">0</string>
    <string name="button_order_text">Order</string>

</resources>
